testsuite/bsc.interra/bugs/bugID298/bug1.bsv.bsc-out.expected
checking package dependencies
Error: "bug1.bsv", line 8, column 19: (P0005)
  Unexpected SV 3.0 keyword `return'; expected `[' or function name
